# tstrait

./: .codecov.yaml  .gitignore  .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  Untitled.ipynb  _stats_tests.py  pyproject.toml  setup.cfg  setup.py  stats_tests.py  verification.py
.circleci/: config.yml
.github/workflows/: docs.yml  lint.yml  tests.yml  wheels.yml
data/: README.md  alphasim.R  comparison.py  simulate_AlphaSimR.R  simulate_simplePHENOTYPES.R
data/alphasim_result/: README.md
data/tmp/: README.md
docs/: LDAK.md  Makefile  README.md  _config.yml  _toc.yml  api.md  build.sh  citation.md  conf.py  contributing.md  effect-size.md  environment.md  genetic.md  index.md  install.md  installation.md  intro.md  license.md  model.md  multi-trait.md  output.md  quick-start.md  quickstart.md  references.bib  simulation.md
docs/release/: index.md  v0.0.1.md
docs/source/: conf.py  index.md
docs/source/_templates/autosummary/: class.rst
docs/source/development/: contributing.md
docs/source/reference/: index.md
docs/source/release/: index.md
docs/source/user/: effect-size.md  environment.md  index.md  intro.md  multi-trait.md
requirements/: development.txt  verification.txt
requirements/CI-complete/: requirements.txt
requirements/CI-docs/: requirements.txt
requirements/CI-tests-pip/: requirements.txt
scripts/: simulate_AlphaSimR.R  simulate_simplePHENOTYPES_exact.R  simulate_simplePHENOTYPES_qqplot.R  simulation_codes.md
tests/: _test_simulate_phenotype.py  data.py  test_base.py  test_comparison.py  test_genetic_value.py  test_init.py  test_phenotype.py  test_phenotype_matrix.py  test_phenotype_old.py  test_public.py  test_sim_trait.py  test_simulate_environment.py  test_simulate_phenotype.py  test_trait.py  test_trait_model.py  test_tstrait_version.py
treeGWAS/: sim_penotypes.py  sim_phenotypes.py  sim_phenotypes_dominance.py  sim_phenotypes_matrix.py
tstrait/: Untitled.ipynb  __init__.py  _version.py  base.py  genetic_value.py  genotype.py  phenotype.py  phenotype_matrix.py  provenance.py  sim_phenotypes.py  simulate_effect_size.py  simulate_environment.py  simulate_phenotype.py  trait.py  trait_model.py
tstrait/tests/: data.py  test_base.py  test_provenance.py  test_sim_trait.py  test_trait_model.py
