[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "tstrait"
dynamic = [
    "version",
]
description = "Quantitative trait simulation of tree sequence data"
readme = "README.md"
maintainers = [
    { name = "Tskit Developers", email = "admin@tskit.dev" },
]
authors = [
    { name = "Daiki Tagami et al." },
]
keywords = [
    "gwas",
    "population genetics",
    "quantitative trait",
    "simulation",
    "statistical genetics",
    "tree sequence",
    "tskit",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2",
    "numba",
    "pandas>=1.0",
    "tskit>=1",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://tskit.dev/tstrait/"
"Bug Tracker" = "https://github.com/tskit-dev/tstrait/issues"
Documentation = "https://tskit.dev/tstrait/docs/"
"Source Code" = "https://github.com/tskit-dev/tstrait"

[dependency-groups]
test = [
    "msprime",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "scipy",
]

docs = [
    "jupyter-book<2",
    "matplotlib",
    "msprime",
    "numpydoc",
    "pandas",
    "sphinx-issues",
]

lint = [
    "ruff==0.15.1",
    "prek==0.3.3",
]

packaging = [
    "twine",
    "validate-pyproject[all]",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "packaging"},
]

verification = [
    "matplotlib",
    "stdpopsim",
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "seaborn",
    "tqdm",
    "argparse",
    "daiquiri",
    "msprime",
]

[tool.setuptools]
packages = [
    "tstrait",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py311"
line-length = 89

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]

ignore = [
    "A001", "A002", "RUF",
    "B905", #Don't add strict=False to zips (B905)
    "N806", "N802", "N803", # Various nags about uppercase vars
    "UP032", # Don't upgrade to f strings
    "PT012", # pytest.raises() block should contain a single simple statement
    # "B028", # No stacklevel for warnings
    # "B018", # Found useless expression. Either assign it
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["tstrait"]
known-third-party = [
  "msprime",
  "tskit",
  "numpy",
  "pytest",
]
