[metadata]
name = tstrait
version = 0.0.1
license = MIT
author = Daiki Tagami
author_email = daiki.tagami@hertford.ox.ac.uk
description = Quantitative trait simulation
#long_description_content_type = text/markdown
#long_description = file: README.md
#url = https://github.com/daikitag/tstrait
project_urls =
    Github = https://github.com/daikitag/tstrait

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

keywords = 
    quantitative trait
    simulation
    tree sequence

[options]
packages = tstrait
python_requires = >=3.7
install_requires = 
    numpy
    numba>=0.57.0
    tskit>=0.5.5

[options.extras_require]
tests = 
    pytest

[tool:pytest]
testpaths = 
    tests