[metadata]
name = tstrait
maintainer = Tskit Developers
maintainer_email = admin@tskit.dev
description = Quantitative trait simulation of tree sequence data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://tskit.dev/
auuthor = Daiki Tagami et al.
download_url = https://pypi.python.org/pypi/tstrait
project_urls =
    Bug Tracker = https://github.com/tskit-dev/tstrait/issues
    Documentation = https://tskit.dev/
    Source Code = https://github.com/tskit-dev/tstrait
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: MacOS
platforms =
    POSIX
    Windows
    MacOS X
keywords = 
    gwas
    population genetics
    quantitative trait
    simulation
    statistical genetics
    tree sequence
    tskit

[options]
packages = tstrait
python_requires = >=3.8
install_requires = 
    numpy
    numba>=0.57.0
    pandas
    tskit>=0.5.5
setup_requires =
    setuptools

[options.extras_require]
tests = 
    msprime
    pytest
    scipy

[tool:pytest]
testpaths = 
    tests